force-app/main/default/objects/redwing__Learning_Version__c/fields/redwing__ILT__c.field-meta.xml
<CustomField>
    <fullName>redwing__ILT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ILT</label>
    <referenceTo>redwing__ILT_Class__c</referenceTo>
    <relationshipLabel>Learning Versions</relationshipLabel>
    <relationshipName>Learning_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>