force-app/main/default/objects/redwing__Learning_Version__c/fields/redwing__Learning_Content_ID__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Content_ID__c</fullName>
    <formula>IF(
!ISBLANK(redwing__Task__c),
redwing__Task__c,
IF(!ISBLANK(redwing__Training_Resource__c),
redwing__Training_Resource__c,
IF(!ISBLANK(redwing__Quiz__c),
redwing__Quiz__c
,&quot;&quot;)
)
)</formula>
    <label>Learning Content ID</label>
    <type>Text</type>
</CustomField>