force-app/main/default/objects/redwing__Learning_Version__c/fields/redwing__Training_Resource__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Resource</label>
    <referenceTo>redwing__Training_Resource__c</referenceTo>
    <relationshipLabel>Learning Versions</relationshipLabel>
    <relationshipName>Learning_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>