force-app/main/default/objects/redwing__Learning_Version__c/fields/redwing__Update_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>redwing__Update_Additional_Information__c</fullName>
    <label>Update Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>