force-app/main/default/objects/redwing__Learning_Version__c/fields/redwing__Update_Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Update_Status__c</fullName>
    <label>Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>