force-app/main/default/objects/redwing__Learning_Version__c/fields/redwing__Update_Successes__c.field-meta.xml
<CustomField>
    <fullName>redwing__Update_Successes__c</fullName>
    <label>Update Successes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>