force-app/main/default/objects/redwing__Learning_Version__c/fields/redwing__Version__c.field-meta.xml
<CustomField>
    <fullName>redwing__Version__c</fullName>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>