force-app/main/default/objects/redwing__Learning_Version__c/fields/redwing__Version_selection_behavior__c.field-meta.xml
<CustomField>
    <fullName>redwing__Version_selection_behavior__c</fullName>
    <label>Version selection behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ask user for version selection</fullName>
            </value>
            <value>
                <fullName>Update version on launch</fullName>
            </value>
            <value>
                <fullName>Update version and reset progress for previous versions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>