force-app/main/default/objects/redwing__Learning_Version__c/listViews/redwing__All.listView-meta.xml
<ListView>
    <fullName>redwing__All</fullName>
    <columns>NAME</columns>
    <columns>redwing__Learning__c</columns>
    <columns>redwing__Learning_Content_ID__c</columns>
    <columns>redwing__Quiz__c</columns>
    <columns>redwing__Task__c</columns>
    <columns>redwing__Training_Resource__c</columns>
    <columns>redwing__Type__c</columns>
    <columns>redwing__Version__c</columns>
    <columns>redwing__Version_selection_behavior__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>